[gd_scene load_steps=2 format=2]

[ext_resource path="res://ShootCtr/ShootCtr.gd" type="Script" id=1]

[node name="ShootCtr" type="Position2D"]
script = ExtResource( 1 )

[node name="ShootPos" type="Position2D" parent="."]
position = Vector2( 40, 0 )

[node name="TimeBtwShot" type="Timer" parent="."]
wait_time = 0.2
autostart = true
[connection signal="timeout" from="TimeBtwShot" to="." method="_on_TimeBtwShot_timeout"]
